kubernetes/Namespace.yml
## cat > kubernetes/namespace.yaml << 'EOF'
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp
  labels:
    name: todoapp
    environment: demo
