kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  namespace: todoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      serviceAccountName: todoapp-sa
      containers:
      - name: todoapp
        # image: "${ECR_REGISTRY}:${IMAGE_TAG}"
        image: "${FULL_IMAGE}"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
