kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: todoapp
spec:
  type: LoadBalancer
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
